## automake.am
##
## Automake.am for the Linux Audio Backstop
##
## by Fred Gleason <fredg@salemradiolabs.com>
##
## Use automake to process this into a Makefile.in

CFLAGS = -Wall
#datadir = /srv/www/htdocs

data_DATA = amber.png green.png red.png lab.html
EXTRA_DIST = amber.png green.png red.png lab.html

CLEANFILES = *~
MAINTAINERCLEANFILES = *~ Makefile.in configure aclocal.m4 *.tar.gz
